--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -65,6 +65,11 @@
                     <a href="{% url 'szuspeech:manage_list' %}">讲座资源</a>
                     <a href="{% url 'szuspeech:add' %}">资源添加</a>
                 {% endif %}
+		{% if perms.dreamer.manager %}
+                    <a href="{% url 'dreamer:sunup' %}">报名统计</a>
+                    <a href="{% url 'dreamer:list' %}">报名信息</a>
+                {% endif %}
+		
 
                 <!-- 以下代码未完成 -->
                 <!-- 以下为提供给社团组织的管理界面 -->
