--- a/stucampus/templates/dreamer/failed.html
+++ b/stucampus/templates/dreamer/failed.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 		<link href="http://www.imooc.com/data/jquery-ui.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="/static/dreamer/failed.css" />
+		<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/failed.css" />
 		<link rel="stylesheet" media="screen and (max-width:600px)" href="failed_moble.css" />
 		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	</head>
