--- a/stucampus/templates/dreamer/failed.html
+++ b/stucampus/templates/dreamer/failed.html
@@ -1,28 +1,27 @@
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>报名失败</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
-		<link href="http://www.imooc.com/data/jquery-ui.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/failed.css" />
-		<link rel="stylesheet" media="screen and (max-width:600px)" href="failed_moble.css" />
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	</head>
-	<body>
-		<div class="Rtn_HomePage">
-			<a href="http://stu.szu.edu.cn/">点击返回学子首页</a>
+<head>
+	<meta charset="UTF-8">
+	<title>报名失败</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/fail_pc.css" media="only screen and (min-width:480px)" />
+	<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/fail_mobile.css" media="only screen and (max-width:480px)" />
+</head>
+<body>
+	<div class="header_img">
+		<img src="/static/images/dreamer/fail.jpg">
+		<div class="header_content">
+			<p class="Chinese">报名失败</p>
+			<p class="English">I'm sorry.</p>
 		</div>
-		<div class="Rtn_HomePage">
-			<a href="">点击重试</a>
+
+	</div>
+	<div class="failure_box">
+		<div class="failure_content">
+			<h3>您可能已经报名或填写的信息格式有误</h3>
+			<p>你可以：</p>
+			<p><a href="/dreamer/signup">返回继续报名</a><a href="">查询是否报名</a></p>
 		</div>
-		<div class="Rtn_Message">
-			<img src="/static/images/dreamer/failed.png" class="pic">
-			<div class="Common">很抱歉，报名没有成功………………</div>
-			<p class="Common">欢迎加入学子新生咨询招新Q群：466404878</p>
-			<p class="Common">学子天地首页：<a href="http://stu.szu.edu.cn/">http://stu.szu.edu.cn/</a></p>
-			<img src="/static/images/socialaccount/stucampusweixin.jpg">
-			<p>(听说，扫扫会更健康……)</p>
-		</div>
-	</body>
+	</div>
+</body>
 </html>
