--- a/stucampus/templates/dreamer/succeed.html
+++ b/stucampus/templates/dreamer/succeed.html
@@ -1,52 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>报名成功</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/succeed.css" />
-		<link rel="stylesheet" media="screen and (max-width:600px)" href="succeed_moble.css" />
-	</head>
-	<body>
-		<div class="Rtn_HomePage">
-			<a href="http://stu.szu.edu.cn/">点击返回学子首页</a>
+<head>
+	<meta charset="UTF-8">
+	<title>报名成功</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/success_pc.css" media="only screen and (min-width:480px)" />
+	<link rel="stylesheet" type="text/css" href="/static/styles/dreamer/success_mobile.css" media="only screen and (max-width:480px)" />
+</head>
+<body>
+	<div class="header_img">
+		<img src="/static/images/dreamer/success.jpg">
+		<div class="header_content">
+			<p class="Chinese">报名成功</p>
+			<p class="English">Welcome to join us.</p>
 		</div>
-		<div class="Rtn_Message">
-			<img src="/static/images/dreamer/succeed.png" class="pic">
-			<div class="Common">恭喜<span></span>同学报名成功，很期待与你一同逗逼~</div>
-			<table>
-				<tr>
-					<caption>报名信息如下~：</caption>
-				<tr>
-					<th>姓名</th>
-					<td name="name">{{ form.name }}</td>
-				</tr>
-				<tr>
-					<th>性别</th>
-					<td name="sex">{{ form.gender }}</td>
-				</tr>
-				<tr>
-					<th>学院</th>
-					<td name="college">{{ form.college }}</td>
-				</tr>
-				<tr>
-					<th>学号</th>
-					<td name="nunmber">{{ form.stu_ID }}</td>
-				</tr>
-				<tr>
-					<th>手机</th>
-					<td name="tel">{{ form.mobile }}</td>
-				</tr>
-				<tr>
-					<th>已报名部门</th>
-					<td name="department">{{ form.dept1 }}， {{ form.dept2 }}</td>
-				</tr>
-			</table>
-			<p class="Common">欢迎加入学子新生咨询招新Q群：466404878</p>
-			<p class="Common">学子天地首页：<a href="http://stu.szu.edu.cn/">http://stu.szu.edu.cn/</a></p>
-			<img src="/static/images/socialaccount/stucampusweixin.jpg">
-			<p>(听说，扫扫会更健康……)</p>
+
+	</div>
+	<div class="failure_box">
+		<div class="failure_content">
+			<h3>你好，{{ form.name }}，你已经成功报名我们的{{ form.dept1 }}和{{ form.dept2 }}，我们将通过你的手机{{ form.mobile }}与你联系</h3>
+			<p>想了解更多我们社团的文化，你还可以：</p>
+			<p>加入我们的qq群：466404878</p>
+			<p>扫一扫我们的二维码</p>
+			<img src="/static/images/dreamer/stucampusweixin.jpg">
+			<p><a href="http://stu.szu.edu.cn/">点击访问我们的网站</a></p>
 		</div>
-	</body>
+	</div>
+</body>
 </html>
