--- a/stucampus/templates/dreamer/apply.html
+++ b/stucampus/templates/dreamer/apply.html
@@ -20,7 +20,7 @@
 	window.onload = function(){
 		f = IsPC();
 		if(f==false){
-			location.href = "/dreamer/signup_mobile/";
+			location.href = "/dreamer/mobile/";
 		}
 	}
 </script>
