--- a/stucampus/static/styles/dreamer/apply_mobile.css
+++ b/stucampus/static/styles/dreamer/apply_mobile.css
@@ -2,8 +2,9 @@
 {
 	margin: 0;
 	padding: 0;
-	font-size: 1em;
+	font-size: 0.9em;
 	font-family:"Microsoft YaHei";
+	color: rgb(81,85,86);
 }
 li,a,input,img
 {
@@ -11,9 +12,8 @@ li,a,input,img
 }
 select 
 {
-	width: 7em;
-	font-size: 1.2em;
-	margin: 1em auto;
+	width: 6em;
+	margin: 0.5em auto;
 	display: inline-block;
 	text-align: center;
 	font-family:"Microsoft YaHei";
@@ -25,64 +25,84 @@ input,select,textarea
 	outline:none;
 	border:none;
 	background:#FFF;
+	color: rgb(156,156,156);
+	font-weight: 300;
 }
 
 /*-----------------------------content-------*/
 .big_box
 {
-	margin: 1em auto;
+	width: 85%;
+	margin: 1.5em auto;
 	overflow: hidden;
-	width: 80%;
 	background: rgb(223,223,223);
 
 }
+
+.middle_box
+{
+	width: 85%;
+	margin: 1em auto;
+	overflow: hidden;
+}
+
+.left
+{	
+	text-align: left;
+}
+.right
+{
+	text-align: right;
+}
 .sign_form
 {
+	width: 100%;
 	text-align: center;
 	background: rgb(238,238,238);
 	overflow: hidden;
 }
 .sign_form h1
-{	
+{
+	margin: 0.5em 0 0.5em 0;	
 	font-size: 2em;
-	font-weight: 800;
+	font-weight: 500;
+	word-spacing: 0.5em;
+	color: rgb(81,85,86);
 }
 .li_click
 {
 	background: rgb(121,123,233);
 	color: #fff;
-	border-radius: 8px;
-	
+	border-radius: 8px;	
 }
 
 .sign_form .department_infor
 {
-	margin: 1em auto;
-	width: 80%;
+	margin: 1.5em auto;
 	text-align: left;
 	background: rgb(223,223,223);
 }
-.dreamer_infor h3
+.dreamer_infor 
 {
-	margin: 1em auto;
-	width: 80%;
+	margin: 1.5em auto;
 	font-size: 1.6em;
 	font-weight: 800;
-
 }
 
 .dreamer_infor .department_select select
 {
-	width: 40%;
-	border: 2px solid rgb(168,168,168);
-	
-	
+	margin: 0 2em 0 2em;
+	width: 25%;
+	font-size: 0.8em;
+	font-weight: 400;
+	border: 2px solid rgb(233,233,233);		
 }
 .department_select h3
 {
 	font-size: 0.9em;
-	font-weight: 600;
-
+	margin-bottom: 1em;
+	font-weight: 450;
+	white-space: nowrap;
 }
 .department_img
 {
@@ -91,7 +111,6 @@ input,select,textarea
 .department_img>li
 {
 	width: 15%;
-
 }
 .department_img img
 {
@@ -100,10 +119,9 @@ input,select,textarea
 }
 .sex
 {
-	margin: 1em auto;
-	width: 70%;
+	margin: 0.5em auto;
+	width: 85%;
 	text-align: left;
-
 }
 .retangle {
 	width: 0;
@@ -116,14 +134,14 @@ input,select,textarea
 .stu_message input
 {
 	margin: 1em auto;
-	width: 70%;
+	width: 85%;
 	height: 2em;
 	display: block;
-	font-size: 1.2em; 
+	font-size: 1em; 
 	border-bottom: 2px solid rgb(160,160,160);
-	color: rgb(160,160,160);
+	background: rgb(223,223,223);
+	color: rgb(156,156,156);
 	line-height: 2em;
-
 }
 
 
@@ -135,38 +153,38 @@ input,select,textarea
 .hobby textarea
 {
 	width: 100%;
+	height: 8em;
 	border: 2px solid rgb(168,168,168);
-	font-size: 1.2em;
+	font-size: 0.8em;
 	border-bottom: none;
-	color: rgb(64,64,61);
+	color: rgb(156,156,156);
 	background: rgb(255,255,255);
-
 }
 .hobby p
 {	
 	text-align: right;
+	font-weight: 200;
+	margin: 0 auto;
+	width: 100%;
 	border: 2px solid rgb(168,168,168);
 	border-top: none;
-	color: rgb(64,64,61);
 	background: rgb(255,255,255);
-
 }
-.hobby input[type="submit"]
+input[type="submit"]
 {
-	margin: 1em auto;
-	width: 30%;
-	height: 3.5em;
-	font-size: 1.2em;
-	line-height: 3.5em;
-	border-radius: 8px;
-	background:rgb(73,73,255);
+	margin: 0.5em auto;
+	width: 6em;
+	height: 1.7em;
+	text-align: center;
+	font-weight: 400;
+	line-height: 1.5em;
+	border-radius: 3px;
+	background:rgb(89,196,188);
 	color: #FFF;
 }
 .xingzheng,.jishu,.sheji,.yunying,.caibian,.retangle
 {
 	display: none;
-
-
 }
 .click_more
 {
