--- a/stucampus/static/styles/dreamer/apply_mobile.css
+++ b/stucampus/static/styles/dreamer/apply_mobile.css
@@ -32,7 +32,7 @@ input,select,textarea
 /*-----------------------------content-------*/
 .big_box
 {
-	width: 85%;
+	width: 75%;
 	margin: 1.5em auto;
 	overflow: hidden;
 	background: rgb(223,223,223);
@@ -41,7 +41,7 @@ input,select,textarea
 
 .middle_box
 {
-	width: 85%;
+	width: 75%;
 	margin: 1em auto;
 	overflow: hidden;
 }
@@ -73,7 +73,6 @@ input,select,textarea
 {
 	background: rgb(121,123,233);
 	color: #fff;
-	border-radius: 8px;	
 }
 
 .sign_form .department_infor
@@ -91,8 +90,8 @@ input,select,textarea
 
 .dreamer_infor .department_select select
 {
-	margin: 0 2em 0 2em;
-	width: 25%;
+	margin: 0 1em 0 1em;
+	width: 5em;
 	font-size: 0.8em;
 	font-weight: 400;
 	border: 2px solid rgb(233,233,233);		
@@ -108,6 +107,11 @@ input,select,textarea
 {
 	width: 100%;
 }
+.department_img p
+{
+	position: relative;
+	width: 100%;
+}
 .department_img>li
 {
 	width: 15%;
@@ -115,15 +119,19 @@ input,select,textarea
 .department_img img
 {
 	width: 100%;
-	height: 4em;
+	height: 4.5em;
 }
 .sex
 {
 	margin: 0.5em auto;
-	width: 85%;
+	width: 75%;
 	text-align: left;
 }
 .retangle {
+	position: absolute;
+	right: 0;
+	left: 0;
+	margin: auto;
 	width: 0;
 	height: 0;
 	border-left: 1em solid transparent;
@@ -134,7 +142,7 @@ input,select,textarea
 .stu_message input
 {
 	margin: 1em auto;
-	width: 85%;
+	width: 75%;
 	height: 2em;
 	display: block;
 	font-size: 1em; 
@@ -170,7 +178,7 @@ input,select,textarea
 	border-top: none;
 	background: rgb(255,255,255);
 }
-input[type="submit"]
+.submit_btn
 {
 	margin: 0.5em auto;
 	width: 6em;
@@ -178,7 +186,6 @@ input[type="submit"]
 	text-align: center;
 	font-weight: 400;
 	line-height: 1.5em;
-	border-radius: 3px;
 	background:rgb(89,196,188);
 	color: #FFF;
 }
