--- a/stucampus/static/styles/dreamer/success_pc.css
+++ b/stucampus/static/styles/dreamer/success_pc.css
@@ -35,7 +35,7 @@ body
 }
 .header_content .English
 {
-	font-size:2em;
+	font-size:1.5em;
 	color: rgb(111,111,111);
 
 }
@@ -56,6 +56,7 @@ body
 }
 .failure_content h3,.failure_content p
 {
+	font-weight: 400;
 	padding: 10px 0 5px 0;
 }
 .failure_content p
@@ -69,12 +70,12 @@ body
 	display: inline-block;
 	text-decoration: none;
 	color: rgb(89,196,188);
-	font-size: 18px;
+	font-size: 13px;
 	border:2px solid rgb(89,196,188);
 	border-radius:10px;
 	-moz-border-radius:10px;
 	text-align: center;
-	line-height: 40px;
+	line-height: 20px;
 }
 .failure_content a:hover
 {
