--- a/stucampus/templates/dreamer/succeed.html
+++ b/stucampus/templates/dreamer/succeed.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="failure_box">
 		<div class="failure_content">
-			<h3>你好，{{ form.name }}，你已经成功报名我们的{{ form.dept1 }}和{{ form.dept2 }}，我们将通过你的手机{{ form.mobile }}与你联系</h3>
+			<h3>你好，{{ form.name }}，你已经成功报名我们的{{ form.get_dept1_display }}和{{ form.get_dept2_display }}，我们将通过你的手机{{ form.mobile }}与你联系</h3>
 			<p>想了解更多我们社团的文化，你还可以：</p>
 			<p>加入我们的qq群：466404878</p>
 			<p>扫一扫我们的二维码</p>
