--- a/stucampus/static/styles/dreamer/apply_mobile.css
+++ b/stucampus/static/styles/dreamer/apply_mobile.css
@@ -2,17 +2,17 @@
 {
 	margin: 0;
 	padding: 0;
-	font-size: 0.9em;
+	font-size: 0.97em;
 	font-family:"Microsoft YaHei";
 	color: rgb(81,85,86);
 }
+*:focus {outline: none}
 li,a,input,img
 {
 	display: inline-block;
 }
 select 
 {
-	width: 6em;
 	margin: 0.5em auto;
 	display: inline-block;
 	text-align: center;
@@ -20,10 +20,9 @@ select
 	border: 2px solid rgb(160,160,160);
 }
 
-input,select,textarea
+input,select
 {
 	outline:none;
-	border:none;
 	background:#FFF;
 	color: rgb(156,156,156);
 	font-weight: 300;
@@ -32,7 +31,7 @@ input,select,textarea
 /*-----------------------------content-------*/
 .big_box
 {
-	width: 75%;
+	width: 85%;
 	margin: 1.5em auto;
 	overflow: hidden;
 	background: rgb(223,223,223);
@@ -41,7 +40,7 @@ input,select,textarea
 
 .middle_box
 {
-	width: 75%;
+	width: 85%;
 	margin: 1em auto;
 	overflow: hidden;
 }
@@ -90,17 +89,16 @@ input,select,textarea
 
 .dreamer_infor .department_select select
 {
-	margin: 0 1em 0 1em;
-	width: 5em;
+	margin: 0 10px 0 10px;
 	font-size: 0.8em;
 	font-weight: 400;
 	border: 2px solid rgb(233,233,233);		
 }
 .department_select h3
 {
-	font-size: 0.9em;
+	font-size: 16px !important;
 	margin-bottom: 1em;
-	font-weight: 450;
+	font-weight: 200;
 	white-space: nowrap;
 }
 .department_img
@@ -119,12 +117,12 @@ input,select,textarea
 .department_img img
 {
 	width: 100%;
-	height: 4.5em;
+	height: 4.7em;
 }
 .sex
 {
 	margin: 0.5em auto;
-	width: 75%;
+	width: 85%;
 	text-align: left;
 }
 .retangle {
@@ -142,10 +140,11 @@ input,select,textarea
 .stu_message input
 {
 	margin: 1em auto;
-	width: 75%;
+	width: 85%;
 	height: 2em;
 	display: block;
 	font-size: 1em; 
+	border:none;
 	border-bottom: 2px solid rgb(160,160,160);
 	background: rgb(223,223,223);
 	color: rgb(156,156,156);
@@ -160,7 +159,7 @@ input,select,textarea
 
 .hobby textarea
 {
-	width: 100%;
+	width: 98%;
 	height: 8em;
 	border: 2px solid rgb(168,168,168);
 	font-size: 0.8em;
@@ -173,7 +172,7 @@ input,select,textarea
 	text-align: right;
 	font-weight: 200;
 	margin: 0 auto;
-	width: 100%;
+	width: 98%;
 	border: 2px solid rgb(168,168,168);
 	border-top: none;
 	background: rgb(255,255,255);
@@ -181,6 +180,7 @@ input,select,textarea
 .submit_btn
 {
 	margin: 0.5em auto;
+	border:none;
 	width: 6em;
 	height: 1.7em;
 	text-align: center;
@@ -195,6 +195,7 @@ input,select,textarea
 }
 .click_more
 {
+
 	text-align: center;
 	color: white;
 	font-size: 1.5em;
