--- a/stucampus/static/styles/dreamer/apply_mobile.css
+++ b/stucampus/static/styles/dreamer/apply_mobile.css
@@ -11,6 +11,12 @@ li,a,input,img
 {
 	display: inline-block;
 }
+
+input,select,textarea
+{
+	-webkit-appearance:none；
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 select 
 {
 	margin: 0.5em auto;
@@ -20,7 +26,7 @@ select
 	border: 2px solid rgb(160,160,160);
 }
 
-input,select
+input[type="text"],select
 {
 	outline:none;
 	background:#FFF;
