--- a/stucampus/templates/dreamer/list.html
+++ b/stucampus/templates/dreamer/list.html
@@ -22,7 +22,7 @@
 					<th>第一志愿</th>
 					<th>第二志愿</th>
 				</tr>
-                {% for resource in page %}
+                	{% for resource in page %}
 				<tr>
 					<td><a href="{% url 'dreamer:detail' %}?id={{ resource.id }}">{{ resource.name }}<a></td>
 					<td>{{ resource.get_gender_display }}</td>
@@ -32,19 +32,19 @@
 					<td>{{ resource.get_dept1_display }}</td>
 					<td>{{ resource.get_dept2_display }}</td>
 				</tr>
-                 {% endfor %} 
+                	{% endfor %} 
 			</table>
 			<div class="pagination">
-                <a href="?page=1" class="prev">首页</a>
-                {% if page.has_previous %}
-                    <a href="?page={{ page.previous_page_number }}" class="prev">上一页</a>
-                {% endif %}
-                <span>第 {{ page.number }} 页，共 {{ page.paginator.num_pages }} 页</span>
-                {% if page.has_next %}
-                    <a class="next" href="?page={{ page.next_page_number }}">下一页</a>
-                {% endif %}
-                <a href="?page={{ page.paginator.num_pages }}" class="next" >尾页</a>
-            </div>
+                		<a href="?search={{ search }}&&page=1" class="prev">首页</a>
+                		{% if page.has_previous %}
+                		    <a href="?search={{ search }}&&page={{ page.previous_page_number }}" class="prev">上一页</a>
+                		{% endif %}
+                		<span>第 {{ page.number }} 页，共 {{ page.paginator.num_pages }} 页</span>
+                		{% if page.has_next %}
+                		    <a class="next" href="?search={{ search }}&&page={{ page.next_page_number }}">下一页</a>
+                		{% endif %}
+                		<a href="?search={{ search }}&&page={{ page.paginator.num_pages }}" class="next" >尾页</a>
+        		</div>
 		</div>
 	</div>
 {% endblock %}
