--- a/stucampus/static/styles/dreamer/detail.css
+++ b/stucampus/static/styles/dreamer/detail.css
@@ -1,136 +1,3 @@
-
-.content
-
-{
-
-	margin: 80px auto;
-
-	text-align: center;
-
-	width: 800px;
-
-	background: rgb(244,246,233);
-
-}
-
-table
-
-{
-
-	margin: 0 auto;
-
-	width: 100%;
-
-	background-color:#aaa;
-
-	line-height:25px;
-
-}
-
-th
-
-{
-
-	text-align: right;
-
-	background-color:rgb(244,246,233);
-
-	width: 15%;
-
-
-
-}
-
-td
-
-{
-
-	background-color:rgb(244,246,233);
-
-	text-align:center;
-
-	width:85%;
-
-}
-
-.pagination
-
-{
-	width:454px;
-	margin: 20px auto 10px auto;
-
-}
-
-.pagination>a
-
-{
-
-	width: 100px;
-
-	height: 28px;
-
-	text-align: center;
-
-	line-height: 28px;
-
-	display: inline-block;
-
-	text-decoration: none;
-
-	border: 1px #dfdfdf solid;
-
-	background: rgb(223,243,223);
-
-	color: rgb(42,35,52);
-
-	box-shadow:4px 2px 6px rgb(223,243,223); 
-
-}
-
-
-.pagination .next
-
-{
-
-	margin-left: 250px;
-
-}
-
-.management
-
-{
-
-	margin: 30px 0 30px 0;
-
-	text-align: center;
-
-}
-
-.management>.btn_delete,.management>.btn_modify,.management>input
-
-{
-
-	width: 100px;
-
-	height: 28px;
-
-	text-align: center;
-
-	line-height: 28px;
-
-	margin: 0px 0 0px 4px;
-
-	display: inline-block;
-
-	text-decoration: none;
-
-	border: 1px #dfdfdf solid;
-
-	background: rgb(42,175,172);
-
-	font-size: 1.2em;
-
-	color: #fff;
 /* Global */
 
 
@@ -464,25 +331,23 @@ th
 
 
 }
-
-td
-
-{
-
+tr input{
+	width:100%;
+	height:100%;
 	background-color:rgb(244,246,233);
-
 	text-align:center;
-
+}
+td
+{
+	background-color:rgb(244,246,233);
+	text-align:center;
 	width:85%;
-
 }
 
 .pagination
-
 {
-
-	margin: 20px 0px 10px 0;
-
+	margin: 10px auto;
+	width:50%;
 }
 
 .pagination>a
@@ -517,7 +382,7 @@ td
 
 {
 
-	margin-left: 400px;
+	float:left;
 
 }
 
@@ -525,7 +390,7 @@ td
 
 {
 
-	margin-left: 250px;
+	float:right;
 
 }
 
