--- a/stucampus/templates/dreamer/apply_mobile.html
+++ b/stucampus/templates/dreamer/apply_mobile.html
@@ -90,7 +90,7 @@
 				</div>
 				
 			</div>
-			<input class="submit_btn" type="submit" value="报&nbsp&nbsp名" id="sub" onMouseOver="Judge()" onMouseDown="notify()" />
+			<input id="sub" class="submit_btn" type="submit" value="报&nbsp&nbsp名" />
 		</form>
 	</div>
 
