--- a/stucampus/templates/articles/article-form.html
+++ b/stucampus/templates/articles/article-form.html
@@ -6,6 +6,16 @@
     {{ form.media }}
 {% endblock %}
 
+{% block beforeload %}
+<script type="text/javascript">
+    window.onload=function(){
+        $("#edui1").css("width","100%");
+        $("#edui1_iframeholder").css("width","100%");
+    }
+</script>
+
+{% endblock %}
+
 {% block content %}
 <form method="post" enctype="multipart/form-data"action="{{ post_url }}?id={{ article_id }}&page={{ page }}">
     {% csrf_token %}
