add the link button in the administrator page for free time count app

--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -84,6 +84,7 @@
                 {% if perms.magazine.magazine_view %}
                     <a href="/magazine">社团杂志</a>
                 {% endif %}
+					<a href="/freetimecount">空闲时间</a>
                 </div>
             </div>    
             <div class="right_content" id="layout_content">
