fixed a bug of the left side menu of manage page

--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -34,7 +34,7 @@
             </span>
         </div>
         <div class="main" id="layout_main">
-            <div class="menu_container" id="menu_box">
+            <div class="menu_container">
                 <div class="left_menu" id="layout_left">
                 {% load permission_check %}
                 {% if user %}
