restore base.css
restore ../statics/styles/manage/base.css

--- a/stucampus/static/styles/manage/base.css
+++ b/stucampus/static/styles/manage/base.css
@@ -9,38 +9,12 @@ body{
     font-size: 14px;
 }
 .container{
-   /* width: 1000px;*/
+    width: 1000px;
     position: relative;
     margin: 0 auto;
-    height: auto;
     overflow: hidden;
-    padding: 0;
-}
-.smNav{
-    position: absolute;
-    top: 0px;
-    height: 80px;
-    width: 80px;
-}
-.smNav ul{
-    margin: 0!important;
-}
-.smNav button{
-    background: #38c2a8;
-    color: #fff;
-    height: 80px;
-    width: 80px;
-    border: none;
-}
-.smNav a{
-    display: block;
-    height: 50px;
-    line-height: 50px !important;
-    background: #38c2a8;
-    color: #FFF !important;
 }
 #header{
-    position: relative;
     width: 100%;
     height: 80px;
     background: #424242;
@@ -48,8 +22,6 @@ body{
     overflow: hidden;
 }
 #header h1{
-    font-size: 28px;
-    margin: 0;
     color: #ffffff;
     font-weight: normal;
     line-height: 80px;
@@ -57,45 +29,18 @@ body{
     text-indent: 100px;
     float: left;
 }
-#header .phonevision h2{
-    font-size: 28px;
-    margin:0 0 0 80px;
-    color: #ffffff;
-    font-weight: normal;
-    line-height: 60px;
-    vertical-align: middle;
-    text-align: center;
-}
-
-.phonevision .navbox{
-    color: #ffffff;
-    line-height: 20px;
-    vertical-align: middle;
-    display: inline-block;
-    margin-left: 80px;
-    width: auto;
-    padding: 0;
-}
-.phonevision .navbox a{
-    color: #ffffff;
-    text-decoration: none;
-    padding: 0px 5px;
-}
-.phonevision .navbox span{
-    padding: 0px 5px;
-}
-.navbox{
+.nav{
     color: #ffffff;
     line-height: 80px;
     vertical-align: middle;
-    padding-left: 150px;
+    margin-left:150px;
 }
-.navbox a{
+.nav a{
     color: #ffffff;
     text-decoration: none;
     padding: 0px 5px;
 }
-.navbox span{
+.nav span{
     padding: 0px 5px;
 }
 .main{
@@ -110,6 +55,7 @@ body{
     position: absolute;
     top: 0px;
     left: 0px;
+    height: 100%;
 }
 .left_menu{
     overflow: hidden;
@@ -132,7 +78,7 @@ body{
     background: #31a592;
 }
 .right_content{
-    width: 100%;
+    width: 900px;
     background: #ffffff;
     position: relative;
     float: left;
@@ -141,6 +87,7 @@ body{
 }
 #footer{
     width: 100%;
+    height: 30px;
     position: relative;
     overflow: hidden;
     text-align: center;
