--- a/stucampus/static/styles/manage/act_lec.css
+++ b/stucampus/static/styles/manage/act_lec.css
@@ -39,18 +39,26 @@
 }
 .act_lec_add input[type=text]{
     width: 300px;
-    border: solid 0px #e5e5e5;
+    border: solid 1px #e5e5e5;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     font-size: 14px;
     line-height: 200%;
     font-family: "Microsoft Yahei";
     color: #7e7e7e;
+    padding-left: 3px;
 }
 .act_lec_add select{
-    border: 0px;
+    border: solid 1px #e5e5e5;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     font-size: 14px;
     line-height: 200%;
     font-family: "Microsoft Yahei";
     color: #7e7e7e;
+    padding-left: 3px;
 }
 .line{
     width: 95%;
