--- a/stucampus/static/styles/szuspeech/manage_form.css
+++ b/stucampus/static/styles/szuspeech/manage_form.css
@@ -22,11 +22,15 @@
 }
 .content input[type=text]{
     width: 300px;
-    border: solid 0px #e5e5e5;
+    border: solid 1px #e5e5e5;
+    border-radius:5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     font-size: 14px;
     line-height: 200%;
     font-family: "Microsoft Yahei";
     color: #7e7e7e;
+    padding-left: 3px;
 }
 .content textarea{
     width: 400px;
@@ -36,7 +40,11 @@
     color: #7e7e7e;
     vertical-align: middle;
     margin: 10px 0px;
-    border: 0px;
+    border: solid 1px #e5e5e5;
+    border-radius:5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    padding-left: 3px;
     resize: none;
 }
 .content_title{
