--- a/stucampus/templates/lecture/manage.html
+++ b/stucampus/templates/lecture/manage.html
@@ -65,7 +65,7 @@
             </li>
             <div class="line"></div>
             <li>
-                <label>网址</label>
+                <label>公文通编号</label>
                 {{ form.url_id }}
                 {% if form.url_id.value %}
                 <a href="http://www.szu.edu.cn/board/view.asp?id={{ form.url_id.value }}" class="szu_url" target="_blank">查看校内网</a>
