change the main page's cover with a new image whose topic is Christmas and clear the tips '封面来自.....' on the top-right of the cover

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -45,7 +45,7 @@
 <div class="inner_body">
 {% block header %}
 <div class="header">
-    <div class="coverphoto_author">封面 By Justin Leibow</div>
+    <!-- <div class="coverphoto_author">封面 By Justin Leibow</div> -->
     <div class="central">
         <div class="home_title"><img src="/static/images/stulogo.jpg" border=0 alt="深圳大学学子天地" /></div>
         <div class="home_description">深圳大学学子天地  深大第一学生门户网站</div>
