--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -76,7 +76,7 @@
             </a>
             <a href="http://weibo.com/stucampus" target="_blank">
                 <div class="co_social_box">
-                    <div class="co_social_logo"><img src="/static/images/socialaccount/stucampusweibo.jpg" height="130px" width="130px" /></div>
+                    <div class="co_social_logo"><img src="/static/images/stulogo.png" height="130px" width="130px" /></div>
                     <h3>学子天地官方微博</h3>
                     <p>
                         关注学子天地官方微博，<br />
