--- a/stucampus/static/styles/responsive.css
+++ b/stucampus/static/styles/responsive.css
@@ -56,7 +56,7 @@
         width: 100%;
     }
     .header{
-        background: #5bc4be;
+        background: #ee4541;
         height: 100%;
     }
     .header .coverphoto_author,.article .article_body .article_share{
