--- a/stucampus/static/styles/global.css
+++ b/stucampus/static/styles/global.css
@@ -152,7 +152,7 @@ a,button,input,h1,h2,h3{
     margin-bottom: 8px;
     padding-bottom: 3px;
     color: #000;
-    border-bottom: 2px solid #EE4541;
+    border-bottom: 2px solid #cd3e3a;
 /**
     border-left: 8px solid #5bc4be;
     padding: 2px 0 3px 8px;
@@ -181,7 +181,7 @@ a,button,input,h1,h2,h3{
     display: inline-block;
     font-size: 16px;
     font-weight: normal;
-    background-color: #EE4541;
+    background-color: #cd3e3a;
     color: #fff;
     padding: 11px 18px 8px;
     border-radius: 2px 2px 0 0;
@@ -207,7 +207,7 @@ a,button,input,h1,h2,h3{
 }
 
 .sidebar .widget .widget_content{
-    border-top: 3px solid #EE4541;
+    border-top: 3px solid #cd3e3a;
 }
 
 .sidebar .widget .widget_content .widget_content_list li{
@@ -231,7 +231,7 @@ a,button,input,h1,h2,h3{
 
 .sidebar .widget .widget_content .widget_content_list li a:hover{
     background-color: #fcfcfc;
-    color: #9b1915;
+    color: #851613;
 }
 
 /**style of footer**/
@@ -249,13 +249,13 @@ a,button,input,h1,h2,h3{
     display: inline-block;
     padding: 18px 28px;
     text-decoration: none;
-    background: #ee4551;
+    background: #cd3e3a;
     color: #ecf8f8;
     font-size: 16px;
 }
 
 .footer a:hover{
-    background: #9b1915;
+    background: #851613;
 }
 
 /**style of copyright**/
