--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -45,7 +45,7 @@
 <div class="inner_body">
 {% block header %}
 <div class="header">
-    <div class="coverphoto_author">封面- 娜娜</div>
+    <div class="coverphoto_author"></div>
     <div class="central">
         <div class="home_title"><img src="/static/images/stulogo.png" border=0 alt="深圳大学学子天地" /></div>
         <div class="home_description">深圳大学学子天地  深大第一学生门户网站</div>
