--- a/stucampus/templates/articles/article-list.html
+++ b/stucampus/templates/articles/article-list.html
@@ -45,7 +45,7 @@
 
 	<div class="sidebar">
 		<div class="widget">
-			<h2>热门排行</h2><a class="widget_more" href="">更多…</a>
+			<h2>热门排行</h2>
 			<div class="widget_content">
 				<ul class="widget_content_list">
 					{% for article in hot_articles_list %}
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="widget">
-			<h2>最近更新</h2><a class="widget_more" href="">更多…</a>
+			<h2>最近更新</h2>
 			<div class="widget_content">
 				<ul class="widget_content_list">
 					{% for article in newest_articles_list %}
