--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
+    <link rel="icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" >
     {% load html_tools %}
     <!--[if IE]>
     {{ 'ie-fix.css' | as_css }}
