Added qiniu cdn

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN">
 <head>
+    {% load html_tools %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="zh-CN" />
     {% block htmltitle %}<title>深圳大学学子天地</title>{% endblock %}
@@ -8,8 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
-    <link rel="icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" >
-    {% load html_tools %}
+    <link rel="icon" href="{% autoSwapCDN 'favicon.ico' %}" type="image/x-icon" >
     <!--[if IE]>
     {{ 'ie-fix.css' | as_css }}
     <![endif]-->
