Optimized article manage page

--- a/stucampus/templates/articles/manage.html
+++ b/stucampus/templates/articles/manage.html
@@ -13,11 +13,11 @@
         <div class="row">
             <li style="width:70%">
                 <label>标题</label>
-                {{ article.title }}
+                <a href="{% url 'articles:display' article.pk %}">{{ article.title }}</a>
             </li>
             <li>
-                <label>文章ID</label>
-                {{ article.pk }}
+                <label>创建日期</label>
+                {{ article.create_date | date:"Y年n月d日" }}
             </li>
         </div>
         <div class="line"></div>
@@ -31,17 +31,6 @@
                 {% endif %}
             </li>
             <li>
-            <label>创建日期</label>
-            {{ article.create_date | date:"Y年n月d日" }}
-        </li>
-        </div>
-        <div class="line"></div>
-        <div class="row">
-            <li style="width:70%">
-                <label>小编</label>
-                {{ article.editor.student.true_name }}
-            </li>
-            <li>
                 <label>修改日期</label>
                 {{ article.modify_date | date:"Y年n月d日" }}
             </li>
@@ -49,12 +38,13 @@
         <div class="line"></div>
         <div class="row">
             <li style="width:70%">
-                <label>点击次数</label>
-                {{ article.click_count }}
+                <label>小编</label>
+                {{ article.editor.student.true_name }}
             </li>
+
             <li>
-                <label>创建人IP</label>
-                {{ article.create_ip }}
+                <label>浏览次数</label>
+                {{ article.click_count }}
             </li>
         </div>
         <div class="line"></div>
@@ -80,7 +70,7 @@
             <a href="">
                 {% if article.important %}
                     已被设为焦点
-                {% else %} 
+                {% else %}
                     尚未设为焦点
                 {% endif %}
             {% endif %}
