--- a/stucampus/templates/master/account-list.html
+++ b/stucampus/templates/master/account-list.html
@@ -8,6 +8,12 @@
 {% endblock %}
 
 {% block content %}
+<div class="searchbar">
+    <form action="{% url 'master:manage_account_list' %}" method="get">
+        关键字:<input type="text" name="keyword" placeholder="只会搜索邮箱、姓名、昵称" />
+        <input type="submit" value="搜索" />
+    </form>
+</div>
 <div class="list_title">
     <span style="width:20%">邮箱</span>
     <span style="width:15%">姓名</span>
